# spider-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.md
.github/workflows/: docker.yml
scripts/benchmarks/: README.md  benchmark.py  results.json  targets.txt
scripts/benchmarks/scrape-evals/: README.md  spider_server_engine.py  spider_server_quality.json  spider_server_quality_html.json
src/: fit_markdown.rs  main.rs  scrape_contract.rs
