[package]
name = "spider-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
htmd = "0.5"
html2text = "0.17.1"
indexmap = "=2.12.0"
lol_html = "=2.6.0"
phf = { version = "0.13.1", features = ["macros"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spider = { version = "=2.50.0", default-features = false, features = ["smart"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
